welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:15: error: ':' expected but ',' found.
def compteur(nombre, tableau) {
                   ^golomb:23: error: identifier expected but '}' found.
 }
 ^